--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="">Download Excursion (Comming soon!)</a>
-    <video src="resources/excursion.mp4" autoplay></video>
+    <br>
+    <video src="resources/excursion.mp4" autoplay loop></video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src="resources/img/camp.png" alt="">
+    <br>
+    <br>
     <img src="resources/img/phone.png" alt="">
     <h2>Coming Soon for iPhone and Android</h2>
     <a href="">Download Excursion (Comming soon!)</a>
